--- a/nbproject/Makefile-genesis.properties
+++ b/nbproject/Makefile-genesis.properties
@@ -1,9 +1,9 @@
 #
-#Fri Aug 18 10:36:43 CST 2017
-default.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=af5abf9e9a422b92aeeec9d9e261d006
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc16\\v1.31\\bin
-configurations-xml=bfd4578ed45895d7129da4bbea6e92ff
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=ae9d6f908f45ead69f57a5ca9f5b38b0
-default.languagetoolchain.version=1.31
+#Sat Jun 23 17:22:34 CST 2018
+default.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=3e0fb27bf0a4a6ef0b08e053d3df4804
+default.languagetoolchain.dir=C\:\\Microchip\\xc16\\v1.34\\bin
+configurations-xml=2ca125bf66b496dab0e5f36330ee8d6f
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=3c333ba33c51ccc254bb69f65f4fff20
+default.languagetoolchain.version=1.34
 host.platform=windows
 conf.ids=default
